--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="imgsection">
-            <img src="../boysit/img/2.png" alt="">
+            <img src="img/2.png" alt="">
         </div>
 
         <div class="intro">
