--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="imgsection">
-            <img src="../boysit/img/1.png" alt="">
+            <img src="img/1.png" alt="">
         </div>
 
         <div class="intro">
